[metadata]
name = Media-Downloader_for_LINE
version = 1.0.6
author = Dream
long_description = file: README.md

[options]
packages = find:
install_requires =
    Flask
    google-api-core
    google-auth-httplib2
    google-auth<2.0dev
    google-api-python-client
    googleapis-common-protos
    httplib2
    line-bot-sdk
    mutagen
    oauth2client
    PyDrive
    requests
    youtube-dl
    python-dotenv
    pytest

[options.packages.find]
where=line